--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test dfdsfdsf",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/catmcgarvey/graphql-example-repo/issues"
   },
-  "homepage": "https://github.com/catmcgarvey/graphql-example-repo#readme"
+  "homepage": "https://github.com/catmcgarvey/graphql-example-repo#readme",
+  "dependencies": {
+    "koa": "^2.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
