--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/catmcgarvey/graphql-example-repo#readme",
   "dependencies": {
-    "koa": "^2.11.0"
+    "koa": "^2.11.0",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
