--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "bump": "standard-version"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "repository": {
     "type": "git",
@@ -19,9 +25,14 @@
   "homepage": "https://github.com/catmcgarvey/graphql-example-repo#readme",
   "dependencies": {
     "koa": "^2.11.0",
+    "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
+    "husky": "^3.0.9",
+    "nodemon": "^1.19.4",
+    "standard-version": "^7.0.0"
   }
 }
